--- a/content.html
+++ b/content.html
@@ -8,13 +8,9 @@
     <meta name="format-detection" content="telephone=no">
     <link href="zerto.css" rel="stylesheet">
     <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-    <title>ZERTO 活动注册</title>
+    <title>ZERTO 调查问卷</title>
     <head>
 <body>
-<!-- <nav class='navbar'>
-    <div class='navbar-header'><</div>
-    <div class='navbar-title'>ZETRO 活动注册</div>
-</nav> -->
 <div class='container'>
     <div class='title'>
         <img src='image/Logo@2x.png' alt='logo' width='240' height=68>
@@ -48,14 +44,14 @@
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">A.是的，0~6个月内</li>
                 <li value="云提供商">B.是的， 6~12个月内</li>
-                <li value="转销商/集成商">C.尚未得到业务部门的支持 </li>
+                <li value="转销商/集成商">C.尚未得到业务部门的支持</li>
             </ul>
         </div>
         <div class='dropdown'>
             <button><span>6.我们可以通过何种方式帮您解决这些问题？</span><span class='caret'></span></button>
             <input type='text' name='company_type'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">A.发给我CA Technologies解决方案的相关信息 </li>
+                <li value="企业">A.发给我CA Technologies解决方案的相关信息</li>
                 <li value="云提供商">B.联系我并安排一次技术交流</li>
             </ul>
         </div>
@@ -63,9 +59,9 @@
             <button><span>7.您在进程决策中所扮演的角色可被描述为:</span><span class='caret'></span></button>
             <input type='text' name='company_type'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">影响者</li>
-                <li value="云提供商">最终决策者</li>
-                <li value="转销商/集成商">其他</li>
+                <li value="企业">A.影响者</li>
+                <li value="云提供商">B.最终决策者</li>
+                <li value="转销商/集成商">C.其他</li>
             </ul>
         </div>
         <div class='err_msg'></div>
