--- a/content.html
+++ b/content.html
@@ -30,8 +30,8 @@
                 <li value="其他">外包</li>
             </ul>
         </div>
-        <div class='dropdown'>
-            <button><span>2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</span><span class='caret'></span></button>
+        <div class='dropdown' >
+            <button id="ymh"><span>2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</span><span class='caret'></span></button>
             <input type='text' name='company_type'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">有</li>
