--- a/content.html
+++ b/content.html
@@ -21,7 +21,7 @@
         <input type='text' name='company' placeholder="公司">
 
         <div class='dropdown'>
-            <button><span>1.贵企业现在有多少开发人员？</span><span class='caret'></span></button>
+            1.<button><span>贵企业现在有多少开发人员？</span><span class='caret'></span></button>
             <input type='text' name='company_type'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">数十人</li>
