--- a/content.html
+++ b/content.html
@@ -17,8 +17,10 @@
     </div>
     <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
         <input type='text' name='name' placeholder="姓名">
+        <input type='text' name='email' placeholder="职位">
         <input type='email' name='email' placeholder="邮箱">
         <input type='text' name='company' placeholder="公司">
+        <input type='text' name='company' placeholder="电话">
 
         <div class='dropdown'>
             <button><span>1.贵企业现在有多少开发人员？</span><span class='caret'></span></button>
