--- a/content.html
+++ b/content.html
@@ -96,6 +96,7 @@
             return true;
     }
     $('#reg_submit').on('click', function () {
+        alert("123")
         var name = reg_form.name.value;
         var email = reg_form.email.value;
         var company = reg_form.company.value;
