--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -26,7 +26,7 @@
 					<img src='image/weixin_code.png' class='weixin_code'>
 				</div>
 				<span class='weixin_code_tip'>
-					长安二维码，关注CA微信公众号，获取更多资讯。
+					长按二维码，关注CA微信公众号，获取更多资讯。
 				</span>
 			</div>
 		</div>
