--- a/content.html
+++ b/content.html
@@ -106,7 +106,7 @@
         var infrastructure = reg_form.infrastructure.value;
         if (trim(name) && trim(email) && trim(company) && trim(company_type) && trim(phone) && trim(job_title)
                 && trim(province) && trim(infrastructure)) {
-            alert(000)
+            alert("321")
             var check1 = checkEmail($("input[name='email']").val());
             var check2 = checkTel($("input[name='phone']").val());
             if (check1 == true && check2 == true) {
