--- a/phone_download.html
+++ b/phone_download.html
@@ -8,7 +8,7 @@
 		<meta name="format-detection" content="telephone=no">
 		<link href="phone_index.css" rel="stylesheet"> 
 		<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-		<title>资料下载</title>
+		<tidivtle>资料下载</title>
 	<head>
 	<body>
 		<div id='phone_container'>
@@ -23,11 +23,11 @@
 				</div>
 				<div class='body_list'>
 					<div class='list_name'>UIM</div>
-					<span class='listname'>统一寄出架构管理</span><img src='image/phone_index/play.png' class='listimg'>
+					<span class='listname'>统一基础架构管理</span><img src='image/phone_index/play.png' class='listimg'>
 				</div>
 				<div class='body_list'>
-						<div class='list_name'>APM</div>
-						<span class='listname'>应用型能管理</span><img src='image/phone_index/play.png' class='listimg'>
+						<div class='list_name'>APM</>
+						<span class='listname'>应用性能管理</span><img src='image/phone_index/play.png' class='listimg'>
 				</div>
 			</div>
 		</div>
