--- a/content.html
+++ b/content.html
@@ -113,7 +113,7 @@
             if (check1 == true && check2 == true) {
                 $.ajax({
                     type: 'post',
-                    url: 'http://ca.dataguiding.com/ca/survey.php',
+                    url: 'http://ca.dataguiding.com/survey.php',
                     data: $("#reg_form").serialize(),
                     dataType: 'json',
                     success: function (result) {
