--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv=”Content-Type” content=”text/html; charset=utf-8″>
-		<meta name="viewport" content="width=750,inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
+		<meta name="viewport" content="inital-scale=1.0,maximum-scale=1.0,user-scalable=no;">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<meta name="format-detection" content="telephone=no">
