--- a/content.html
+++ b/content.html
@@ -126,7 +126,7 @@
                         "question4=A" +
                         "question5=EWREWR" +
                         "question6=A" +
-                        "question7=A" +
+                        "question7=A" ;
 //                        "question1=" + one + "&" +
 //                        "question2=" + two + "&" +
 //                        "question4=" + four + "&" +
