--- a/questionnaire.html
+++ b/questionnaire.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
-    <link href="content.css" rel="stylesheet">
+    <link href="questionnaire.css" rel="stylesheet">
     <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
     <title>ZERTO 调查问卷</title>
     <head>
