--- a/phone_weixin.html
+++ b/phone_weixin.html
@@ -11,7 +11,7 @@
 		<title>官方微信</title>
 	<head>
 	<body>
-		<div id='phone_container'>
+		<div id='weixin_container'>
 			<div class='weixin_banner'>
 				<div class='weixin_banner_container'>
 					<span class='weixin_word_1'>每个行业都独一无二</span>
