--- a/phone_download.html
+++ b/phone_download.html
@@ -13,22 +13,30 @@
 	<body>
 		<div id='phone_container'>
 			<div class='download_body'>
-				<div class='body_list'>
-					<div class='list_name'>持续交付</div>
-					<span class='listname'>应用持续交付</span><img src='image/phone_index/play.png' class='listimg'>
-				</div>
-				<div class='body_list'>
-					<div class='list_name'>API管理</div>
-					<span class='listname'>API管理</span><img src='image/phone_index/play.png' class='listimg'>
-				</div>
-				<div class='body_list'>
-					<div class='list_name'>UIM</div>
-					<span class='listname'>统一基础架构管理</span><img src='image/phone_index/play.png' class='listimg'>
-				</div>
-				<div class='body_list'>
-						<div class='list_name'>APM</div>
-						<span class='listname'>应用性能管理</span><img src='image/phone_index/play.png' class='listimg'>
-				</div>
+				<a href='download_sustained.html'>
+					<div class='body_list'>
+						<div class='list_name'>持续交付</div>
+						<span class='listname'>应用持续交付</span><img src='image/phone_index/play.png' class='listimg'>
+					</div>
+				</a>
+				<a href='download_API.html'>
+					<div class='body_list'>
+						<div class='list_name'>API管理</div>
+						<span class='listname'>API管理</span><img src='image/phone_index/play.png' class='listimg'>
+					</div>
+				</a>
+				<a href='download_UIM.html'>
+					<div class='body_list'>
+						<div class='list_name'>UIM</div>
+						<span class='listname'>统一基础架构管理</span><img src='image/phone_index/play.png' class='listimg'>
+					</div>
+				</a>
+				<a href='download_APM.html'>
+					<div class='body_list'>
+							<div class='list_name'>APM</div>
+							<span class='listname'>应用性能管理</span><img src='image/phone_index/play.png' class='listimg'>
+					</div>
+				</a>
 			</div>
 		</div>
 	</body>
