--- a/download_UIM.html
+++ b/download_UIM.html
@@ -11,7 +11,7 @@
 		<title>统一基础架构管理</title>
 	<head>
 	<body>
-		<div id='phone_container'>
+		<div id='download_container'>
 			<span class='download_title'>统一基础架构管理</span>
 			<div class='download_list'>
 				<span class='title_list'>成功案例</span>
