--- a/download_sustained.html
+++ b/download_sustained.html
@@ -11,7 +11,7 @@
 		<title>持续交付</title>
 	<head>
 	<body>
-		<div id='phone_container'>
+		<div id='download_container'>
 			<span class='download_title'>持续交付</span>
 			<div class='download_list'>
 				<span class='title_list'>白皮书</span>
