--- a/download_sustained.html
+++ b/download_sustained.html
@@ -27,14 +27,18 @@
 				<div class='content_list_2'>
 					<span class='content_words'>应用发布进程自动化</span>
 				</div>
-				<span class='download_link'>点此查看</span>
+				<a href='pdf/持续交付/解决方案简介：发布自动化.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
 					<span class='content_words'>开发和测试限制会阻碍数字变革的步伐吗？</span>
 				</div>
-				<span class='download_link'>点此查看</span>.
+				<a href='pdf/持续交付/解决方案简介：服务虚拟化.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 		</div>
 	</body>
