--- a/download_API.html
+++ b/download_API.html
@@ -18,7 +18,7 @@
 				<div class='content_list_1'>
 					<span class='content_words'>CA API管理</span>
 				</div>
-				<a href='pdf/持续交付/解决方案：跨越开发运维的鸿沟.pdf'>
+				<a href='pdf/API管理/产品简介：CA API管理.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
@@ -27,14 +27,18 @@
 				<div class='content_list_2'>
 					<span class='content_words'>阿拉斯加航空</span>
 				</div>
-				<span class='download_link'>点此查看</span>
+				<a href='pdf/API管理/成功案例：阿拉斯加航空.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>方案全览</span>
 				<div class='content_list_3'>
 					<span class='content_words'>CA API管理</span>
 				</div>
-				<span class='download_link'>点此查看</span>.
+				<a href='pdf/API管理/方案全览：CA API管理.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 		</div>
 	</body>
