--- a/download_APM.html
+++ b/download_APM.html
@@ -18,23 +18,27 @@
 				<div class='content_list_1'>
 					<span class='content_words'>应用经济时代如何提升客户体验</span>
 				</div>
-				<a href='pdf/持续交付/解决方案：跨越开发运维的鸿沟.pdf'>
+				<a href='pdf/APM/白皮书：应用经济时代如何提升客户体验.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>解决方案介绍</span>
 				<div class='content_list_2'>
-					<span class='content_words'>通过提升应用改善客户体验</span>
+					<span class='content_words'>CA应用性能管理方案</span>
 				</div>
-				<span class='download_link'>点此查看</span>
+				<a href='pdf/APM/解决方案介绍：CA应用性能管理方案.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>解决方案介绍</span>
 				<div class='content_list_3'>
-					<span class='content_words'>CA应用性能管理方案</span>
+					<span class='content_words'>通过提升应用改善客户体验</span>
 				</div>
-				<span class='download_link'>点此查看</span>.
+				<a href='pdf/APM/解决方案介绍：通过提升应用改善客户体验.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 		</div>
 	</body>
