--- a/download_UIM.html
+++ b/download_UIM.html
@@ -16,9 +16,9 @@
 			<div class='download_list'>
 				<span class='title_list'>成功案例</span>
 				<div class='content_list_1'>
-					<span class='content_words'>digitalglobal</span>
+					<span class='content_words'>digitalglobe</span>
 				</div>
-				<a href='pdf/持续交付/解决方案1.pdf'>
+				<a href='pdf/UIM/成功案例：digitalglobe.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
@@ -27,14 +27,18 @@
 				<div class='content_list_2'>
 					<span class='content_words'>确保IT服务可用性的同时提高基础架构和维护的敏捷性</span>
 				</div>
-				<span class='download_link'>点此查看</span>
+				<a href='pdf/UIM/解决方案介绍.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>原因</span>
 				<div class='content_list_3'>
 					<span class='content_words'>选择CA统一架构监控的25大原因</span>
 				</div>
-				<span class='download_link'>点此查看</span>.
+				<a href='pdf/UIM/选择CA统一架构.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
 			</div>
 		</div>
 	</body>
