--- a/questionnaire.html
+++ b/questionnaire.html
@@ -21,9 +21,9 @@
         <input type='email' name='email' placeholder="邮箱">
         <input type='text' name='company' placeholder="公司">
         <input type='text' name='phone' placeholder="电话">
-
+        <div>1.贵企业现在有多少开发人员？</div>
         <div class='dropdown'>
-            <button><span>1.贵企业现在有多少开发人员？</span><span class='caret'></span></button>
+            <button><span class='caret'></span></button>
             <input type='text' name='one'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">数十人</li>
@@ -32,8 +32,9 @@
                 <li value="其他">外包</li>
             </ul>
         </div>
+        <div>2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</div>
         <div class='dropdown'>
-            <button id="ymh"><span>2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</span><span class='caret'></span></button>
+            <button id="ymh"><span class='caret'></span></button>
             <input type='text' name='two'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">有</li>
