--- a/download_API.html
+++ b/download_API.html
@@ -27,7 +27,7 @@
 				<div class='content_list_2'>
 					<span class='content_words'>阿拉斯加航空</span>
 				</div>
-				<a href='pdf/API管理/成功案例：阿拉斯加航空.pdf'>
+				<a href='pdf/API管理/成功案例：阿拉斯加航空.PDF'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
