--- a/questionnaire.html
+++ b/questionnaire.html
@@ -49,9 +49,10 @@
                 <li value="转销商/集成商">C.尚未得到业务部门的支持</li>
             </ul>
         </div>
-        <span>6.我们可以通过何种方式帮您解决这些问题？</span>
+        5.您目前正在着眼解决什么具体的IT问题？<br>
+        <input type="text" name="five" >
         <div class='dropdown'>
-            <button><span class='caret'></span></button>
+            <button><span>6.我们可以通过何种方式帮您解决这些问题？</span><span class='caret'></span></button>
             <input type='text' name='six'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">A.发给我CA Technologies解决方案的相关信息</li>
