--- a/questionnaire.html
+++ b/questionnaire.html
@@ -40,8 +40,9 @@
                 <li value="云提供商">没有</li>
             </ul>
         </div>
+        4.这个项目是否已经获得预算支持？ <br>
         <div class='dropdown'>
-            <button><span>4.这个项目是否已经获得预算支持？ </span><span class='caret'></span></button>
+            <button><span></span><span class='caret'></span></button>
             <input type='text' name='four'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">A.是的，0~6个月内</li>
