--- a/questionnaire.html
+++ b/questionnaire.html
@@ -34,7 +34,7 @@
         </div>
         2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？<br>
         <div class='dropdown'>
-            <button id="ymh"><span></span><span class='caret'></span></button>
+            <button ><span></span><span class='caret'></span></button>
             <input type='text' name='two'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">有</li>
