--- a/questionnaire.html
+++ b/questionnaire.html
@@ -32,9 +32,9 @@
                 <li value="其他">外包</li>
             </ul>
         </div>
-        2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？<br>
+        <div>2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</div>
         <div class='dropdown'>
-            <button ><span></span><span class='caret'></span></button>
+            <button><span></span><span class='caret'></span></button>
             <input type='text' name='two'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">有</li>
@@ -52,7 +52,7 @@
             </ul>
         </div>
         5.您目前正在着眼解决什么具体的IT问题？<br>
-        <input type="text" name="five" >
+        <input type="text" name="five">
         <div class='dropdown'>
             <button><span>6.我们可以通过何种方式帮您解决这些问题？</span><span class='caret'></span></button>
             <input type='text' name='six'>
