--- a/questionnaire.html
+++ b/questionnaire.html
@@ -21,7 +21,7 @@
         <input type='email' name='email' placeholder="邮箱">
         <input type='text' name='company' placeholder="公司">
         <input type='text' name='phone' placeholder="电话">
-        1.贵企业现在有多少开发人员？<br>
+        <div>1.贵企业现在有多少开发人员？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='one'>
@@ -41,7 +41,7 @@
                 <li value="云提供商">没有</li>
             </ul>
         </div>
-        4.这个项目是否已经获得预算支持？ <br>
+        <div>4.这个项目是否已经获得预算支持？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='four'>
@@ -51,18 +51,20 @@
                 <li value="转销商/集成商">C.尚未得到业务部门的支持</li>
             </ul>
         </div>
-        5.您目前正在着眼解决什么具体的IT问题？<br>
-        <input type="text" name="five">
+        <!--<div>5.您目前正在着眼解决什么具体的IT问题？</div>-->
+        <!--<input type="text" name="five">-->
+        <div>6.我们可以通过何种方式帮您解决这些问题？</div>
         <div class='dropdown'>
-            <button><span>6.我们可以通过何种方式帮您解决这些问题？</span><span class='caret'></span></button>
+            <button><span></span><span class='caret'></span></button>
             <input type='text' name='six'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">A.发给我CA Technologies解决方案的相关信息</li>
                 <li value="云提供商">B.联系我并安排一次技术交流</li>
             </ul>
         </div>
+        <div>7.您在进程决策中所扮演的角色可被描述为:</div>
         <div class='dropdown'>
-            <button><span>7.您在进程决策中所扮演的角色可被描述为:</span><span class='caret'></span></button>
+            <button><span></span><span class='caret'></span></button>
             <input type='text' name='seven'>
             <ul class='form-select select_type select_company_type'>
                 <li value="企业">A.影响者</li>
