--- a/questionnaire.html
+++ b/questionnaire.html
@@ -51,8 +51,8 @@
                 <li value="转销商/集成商">C.尚未得到业务部门的支持</li>
             </ul>
         </div>
-        <!--<div>5.您目前正在着眼解决什么具体的IT问题？</div>-->
-        <!--<input type="text" name="five">-->
+        <div>5.您目前正在着眼解决什么具体的IT问题？</div>
+        <input type="text" name="five">
         <div>6.我们可以通过何种方式帮您解决这些问题？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
