--- a/questionnaire.html
+++ b/questionnaire.html
@@ -21,7 +21,7 @@
         <input type='email' name='email' placeholder="邮箱">
         <input type='text' name='company' placeholder="公司">
         <input type='text' name='phone' placeholder="电话">
-        <div>1.贵企业现在有多少开发人员？</div>
+        <div class="title">1.贵企业现在有多少开发人员？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='one'>
@@ -32,7 +32,7 @@
                 <li value="其他">外包</li>
             </ul>
         </div>
-        <div>2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</div>
+        <div class="title">2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='two'>
@@ -41,7 +41,7 @@
                 <li value="云提供商">没有</li>
             </ul>
         </div>
-        <div>4.这个项目是否已经获得预算支持？</div>
+        <div class="title">4.这个项目是否已经获得预算支持？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='four'>
@@ -51,9 +51,9 @@
                 <li value="转销商/集成商">C.尚未得到业务部门的支持</li>
             </ul>
         </div>
-        <div>5.您目前正在着眼解决什么具体的IT问题？</div>
+        <div class="title">5.您目前正在着眼解决什么具体的IT问题？</div>
         <input type="text" name="five">
-        <div>6.我们可以通过何种方式帮您解决这些问题？</div>
+        <div class="title">6.我们可以通过何种方式帮您解决这些问题？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='six'>
@@ -62,7 +62,7 @@
                 <li value="云提供商">B.联系我并安排一次技术交流</li>
             </ul>
         </div>
-        <div>7.您在进程决策中所扮演的角色可被描述为:</div>
+        <div class="title">7.您在进程决策中所扮演的角色可被描述为:</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='seven'>
