--- a/questionnaire.html
+++ b/questionnaire.html
@@ -129,10 +129,10 @@
                         "question3_5=1" + "&" +
                         "question3_6=1" + "&" +
                         "question3_7=1" + "&" +
-                        "question4=A" + "&" +
+                        "question4=" + four + "&" +
                         "question5=EWREWR" + "&" +
-                        "question6=A" + "&" +
-                        "question7=A";
+                        "question6=" + six + "&" +
+                        "question7=" + seven;
 //                        "question1=" + one + "&" +
 //                        "question2=" + two + "&" +
 //                        "question4=" + four + "&" +
