--- a/questionnaire.html
+++ b/questionnaire.html
@@ -26,10 +26,10 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='one'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">数十人</li>
-                <li value="云提供商">数百人</li>
-                <li value="转销商/集成商">数千人</li>
-                <li value="其他">外包</li>
+                <li value="A">数十人</li>
+                <li value="B">数百人</li>
+                <li value="C">数千人</li>
+                <li value="D">外包</li>
             </ul>
         </div>
         <div class="title">2.在过去6个月中，贵公司是否发生过应用系统宕机或者性能太慢而接到大量用户投诉？</div>
@@ -37,8 +37,8 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='two'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">有</li>
-                <li value="云提供商">没有</li>
+                <li value="A">有</li>
+                <li value="B">没有</li>
             </ul>
         </div>
         <div class="title">4.这个项目是否已经获得预算支持？</div>
@@ -46,9 +46,9 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='four'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">A.是的，0~6个月内</li>
-                <li value="云提供商">B.是的， 6~12个月内</li>
-                <li value="转销商/集成商">C.尚未得到业务部门的支持</li>
+                <li value="A">A.是的，0~6个月内</li>
+                <li value="B">B.是的， 6~12个月内</li>
+                <li value="C">C.尚未得到业务部门的支持</li>
             </ul>
         </div>
         <div class="title">5.您目前正在着眼解决什么具体的IT问题？</div>
@@ -58,8 +58,8 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='six'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">A.发给我CA Technologies解决方案的相关信息</li>
-                <li value="云提供商">B.联系我并安排一次技术交流</li>
+                <li value="A">A.发给我CA Technologies解决方案的相关信息</li>
+                <li value="B">B.联系我并安排一次技术交流</li>
             </ul>
         </div>
         <div class="title">7.您在进程决策中所扮演的角色可被描述为:</div>
@@ -67,9 +67,9 @@
             <button><span></span><span class='caret'></span></button>
             <input type='text' name='seven'>
             <ul class='form-select select_type select_company_type'>
-                <li value="企业">A.影响者</li>
-                <li value="云提供商">B.最终决策者</li>
-                <li value="转销商/集成商">C.其他</li>
+                <li value="A">A.影响者</li>
+                <li value="B">B.最终决策者</li>
+                <li value="C">C.其他</li>
             </ul>
         </div>
         <div class='err_msg'></div>
