--- a/download_sustained.html
+++ b/download_sustained.html
@@ -18,7 +18,7 @@
 				<div class='content_list_1'>
 					<span class='content_words'>借助服务虚化消除软件开发和测试的限制</span>
 				</div>
-				<a href='pdf/持续交付/解决方案1.pdf'>
+				<a href='pdf/持续交付/白皮书：借助服务虚化消除软件开发和测试的限制.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
@@ -27,12 +27,39 @@
 				<div class='content_list_2'>
 					<span class='content_words'>应用发布进程自动化</span>
 				</div>
-				<a href='pdf/持续交付/解决方案简介：发布自动化.pdf'>
+				<a href='pdf/持续交付/白皮书：应用发布进程自动化.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
+				<div class='content_list_3'>
+					<span class='content_words'>开发和测试限制会阻碍数字变革的步伐吗_update</span>
+				</div>
+				<a href='pdf/持续交付/电子书：开发和测试限制会阻碍数字变革的步伐吗_update.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>解决方案</span>
+				<div class='content_list_1'>
+					<span class='content_words'>跨越开发运维的鸿沟</span>
+				</div>
+				<a href='pdf/持续交付/解决方案：跨越开发运维的鸿沟.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>解决方案简介</span>
+				<div class='content_list_2'>
+					<span class='content_words'>应用发布进程自动化</span>
+				</div>
+				<a href='pdf/持续交付/解决方案简介：发布自动化.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>解决方案简介</span>
 				<div class='content_list_3'>
 					<span class='content_words'>开发和测试限制会阻碍数字变革的步伐吗？</span>
 				</div>
