--- a/download_API.html
+++ b/download_API.html
@@ -14,8 +14,17 @@
 		<div id='download_container'>
 			<span class='download_title'>API管理</span>
 			<div class='download_list'>
-				<span class='title_list'>产品简介</span>
+				<span class='title_list'>IT成功案例</span>
 				<div class='content_list_1'>
+					<span class='content_words'>Icemobile</span>
+				</div>
+				<a href='pdf/API管理/IT成功案例：Icemobile.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>产品简介</span>
+				<div class='content_list_2'>
 					<span class='content_words'>CA API管理</span>
 				</div>
 				<a href='pdf/API管理/产品简介：CA API管理.pdf'>
@@ -24,7 +33,7 @@
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>成功案例</span>
-				<div class='content_list_2'>
+				<div class='content_list_3'>
 					<span class='content_words'>阿拉斯加航空</span>
 				</div>
 				<a href='pdf/API管理/成功案例：阿拉斯加航空.PDF'>
@@ -32,11 +41,47 @@
 				</a>
 			</div>
 			<div class='download_list'>
-				<span class='title_list'>方案全览</span>
+				<span class='title_list'>电子书</span>
+				<div class='content_list_1'>
+					<span class='content_words'>API管理手册</span>
+				</div>
+				<a href='pdf/API管理/电子书：API管理手册.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>电子书</span>
+				<div class='content_list_2'>
+					<span class='content_words'>API挑战和架构</span>
+				</div>
+				<a href='pdf/API管理/电子书：API挑战和架构.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
+					<span class='content_words'>面向企业的完整API挑战模型</span>
+				</div>
+				<a href='pdf/API管理/电子书：面向企业的完整API挑战模型.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>方案全览</span>
+				<div class='content_list_1'>
 					<span class='content_words'>CA API管理</span>
 				</div>
 				<a href='pdf/API管理/方案全览：CA API管理.pdf'>
+					<span class='download_link'>点此查看</span>
+				</a>
+			</div>
+			<div class='download_list'>
+				<span class='title_list'>医疗成功案例</span>
+				<div class='content_list_2'>
+					<span class='content_words'>Amerigroup</span>
+				</div>
+				<a href='pdf/API管理/医疗成功案例：Amerigroup.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
