--- a/questionnaire.html
+++ b/questionnaire.html
@@ -48,22 +48,22 @@
                 <input style="display:none;" id="q7_1" type="checkbox" name="q7" value="1"><label>当时在上课</label>
             </li>
             <li style="width: 99%;">
-                <a class="check"></a>
+                <input type="checkbox" class="check">
                 <input style="display:none;" id="q7_2" type="checkbox" name="q7" value="2">
                 <label>服务虚拟化管理</label>
             </li>
             <li style="width: 99%;">
-                <a class="check"></a>
+                <input type="checkbox" class="check">
                 <input style="display:none;" id="q7_3" type="checkbox" name="q7" value="2">
                 <label>API安全管理</label>
             </li>
             <li style="width: 99%;">
-                <a class="check"></a>
+                <input type="checkbox" class="check">
                 <input style="display:none;" id="q7_4" type="checkbox" name="q7" value="2">
                 <label>应用性能管理</label>
             </li>
             <li style="width: 99%;">
-                <a class="check"></a>
+                <input type="checkbox" class="check">
                 <input style="display:none;" id="q7_5" type="checkbox" name="q7" value="2">
                 <label>当时在外不方便</label>
             </li>
