--- a/questionnaire.html
+++ b/questionnaire.html
@@ -44,28 +44,20 @@
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
         <ul class="ulradiocheck">
             <li style="width: 99%;">
-                <a class="check"></a>
-                <input style="display:none;" id="q7_1" type="checkbox" name="q7" value="1"><label>当时在上课</label>
-            </li>
-            <li style="width: 99%;">
                 <input type="checkbox" class="check">
-                <input style="display:none;" id="q7_2" type="checkbox" name="q7" value="2">
                 <label>服务虚拟化管理</label>
             </li>
             <li style="width: 99%;">
                 <input type="checkbox" class="check">
-                <input style="display:none;" id="q7_3" type="checkbox" name="q7" value="2">
                 <label>API安全管理</label>
             </li>
             <li style="width: 99%;">
                 <input type="checkbox" class="check">
-                <input style="display:none;" id="q7_4" type="checkbox" name="q7" value="2">
                 <label>应用性能管理</label>
             </li>
             <li style="width: 99%;">
                 <input type="checkbox" class="check">
-                <input style="display:none;" id="q7_5" type="checkbox" name="q7" value="2">
-                <label>当时在外不方便</label>
+                <label>其他</label>
             </li>
 
             <div class="title">4.这个项目是否已经获得预算支持？</div>
