--- a/download_sustained.html
+++ b/download_sustained.html
@@ -16,9 +16,9 @@
 			<div class='download_list'>
 				<span class='title_list'>白皮书</span>
 				<div class='content_list_1'>
-					<span class='content_words'>借助服务虚化消除软件开发和测试的限制</span>
+					<span class='content_words'>借助服务虚拟化消除软件开发和测试的限制</span>
 				</div>
-				<a href='pdf/持续交付/白皮书：借助服务虚化消除软件开发和测试的限制.pdf'>
+				<a href='pdf/持续交付/白皮书：借助服务虚拟化消除软件开发和测试的限制.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
@@ -34,9 +34,9 @@
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
-					<span class='content_words'>开发和测试限制会阻碍数字变革的步伐吗_update</span>
+					<span class='content_words'>开发和测试限制会阻碍数字化变革的步伐吗_update</span>
 				</div>
-				<a href='pdf/持续交付/电子书：开发和测试限制会阻碍数字变革的步伐吗_update.pdf'>
+				<a href='pdf/持续交付/电子书：开发和测试限制会阻碍数字化变革的步伐吗_update.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
