--- a/download_API.html
+++ b/download_API.html
@@ -52,18 +52,18 @@
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_2'>
-					<span class='content_words'>API挑战和架构</span>
+					<span class='content_words'>API战略和架构</span>
 				</div>
-				<a href='pdf/API管理/电子书：API挑战和架构.pdf'>
+				<a href='pdf/API管理/电子书：API战略和架构.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
 			<div class='download_list'>
 				<span class='title_list'>电子书</span>
 				<div class='content_list_3'>
-					<span class='content_words'>面向企业的完整API挑战模型</span>
+					<span class='content_words'>面向企业的完整API战略模型</span>
 				</div>
-				<a href='pdf/API管理/电子书：面向企业的完整API挑战模型.pdf'>
+				<a href='pdf/API管理/电子书：面向企业的完整API战略模型.pdf'>
 					<span class='download_link'>点此查看</span>
 				</a>
 			</div>
