--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,20 +43,20 @@
         </div>
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
         <ul class="ulradiocheck">
-            <li style="width: 99%;">
-                <input type="checkbox" class="check">
+            <li>
+                <a class="jqCheckbox"></a>
                 <label>服务虚拟化管理</label>
             </li>
-            <li style="width: 99%;">
-                <input type="checkbox" class="check">
+            <li>
+                <a class="jqCheckbox"></a>
                 <label>API安全管理</label>
             </li>
-            <li style="width: 99%;">
-                <input type="checkbox" class="check">
+            <li>
+                <a class="jqCheckbox"></a>
                 <label>应用性能管理</label>
             </li>
-            <li style="width: 99%;">
-                <input type="checkbox" class="check">
+            <li>
+                <a class="jqCheckbox"></a>
                 <label>其他</label>
             </li>
 
