--- a/questionnaire.html
+++ b/questionnaire.html
@@ -56,7 +56,7 @@
                 <label>应用性能管理</label>
             </li>
             <li>
-                <a class="jqCheckbox"></a>
+                <a class="jqCheckbox" href="/image/unchecked.png"></a>
                 <label>其他</label>
             </li>
 
