--- a/questionnaire.html
+++ b/questionnaire.html
@@ -56,7 +56,7 @@
                 <label>应用性能管理</label>
             </li>
             <li>
-                <img class="jqCheckbox" href="http://ca.dataguiding.com/image/unchecked.png">
+                <span><img class="jqCheckbox" href="http://ca.dataguiding.com/image/unchecked.png"></span>
                 <label>其他</label>
             </li>
 
