--- a/questionnaire.html
+++ b/questionnaire.html
@@ -44,19 +44,19 @@
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
         <ul class="ulradiocheck">
             <li>
-                <a class="jqCheckbox"></a>
+                <input type="checkbox">
                 <label>服务虚拟化管理</label>
             </li>
             <li>
-                <a class="jqCheckbox"></a>
+                <input type="checkbox">
                 <label>API安全管理</label>
             </li>
             <li>
-                <a class="jqCheckbox"></a>
+                <input type="checkbox">
                 <label>应用性能管理</label>
             </li>
             <li>
-                <span><img class="jqCheckbox" href="http://ca.dataguiding.com/image/unchecked.png"></span>
+                <input type="checkbox">
                 <label>其他</label>
             </li>
 
