--- a/questionnaire.html
+++ b/questionnaire.html
@@ -42,24 +42,12 @@
             </ul>
         </div>
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
-        <ul class="ulradiocheck">
-            <li>
-                <input type="checkbox">
-                <label>服务虚拟化管理</label>
-            </li>
-            <li>
-                <input type="checkbox">
-                <label>API安全管理</label>
-            </li>
-            <li>
-                <input type="checkbox">
-                <label>应用性能管理</label>
-            </li>
-            <li>
-                <input type="checkbox">
-                <label>其他</label>
-            </li>
-        </ul>
+        <div>
+            <label><input name="Fruit" type="checkbox" value="" />服务虚拟化管理</label>
+            <label><input name="Fruit" type="checkbox" value="" />API安全管理</label>
+            <label><input name="Fruit" type="checkbox" value="" />应用性能管理</label>
+            <label><input name="Fruit" type="checkbox" value="" />其他</label>
+        </div>
         <div class="title">4.这个项目是否已经获得预算支持？</div>
         <div class='dropdown'>
             <button><span></span><span class='caret'></span></button>
