--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,10 +43,10 @@
         </div>
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
         <div>
-            <label><input name="Fruit" type="checkbox" value="" />服务虚拟化管理</label>
-            <label><input name="Fruit" type="checkbox" value="" />API安全管理</label>
-            <label><input name="Fruit" type="checkbox" value="" />应用性能管理</label>
-            <label><input name="Fruit" type="checkbox" value="" />其他</label>
+            <label style="float: left"><input name="Fruit" type="checkbox" value="" />服务虚拟化管理</label>
+            <label style="float: left"><input name="Fruit" type="checkbox" value="" />API安全管理</label>
+            <label style="float: left"><input name="Fruit" type="checkbox" value="" />应用性能管理</label>
+            <label style="float: left"><input name="Fruit" type="checkbox" value="" />其他</label>
         </div>
         <div class="title">4.这个项目是否已经获得预算支持？</div>
         <div class='dropdown'>
