--- a/questionnaire.html
+++ b/questionnaire.html
@@ -43,10 +43,10 @@
         </div>
         <div class="title">3.在以下领域中，哪些是您接下来的6个月中最需要改善的？（可多选）</div>
         <div>
-            <div style="display: block"><input name="Fruit" type="checkbox" value=""/><span>服务虚拟化管理</span></div>
-            <div style="display: block"><input name="Fruit" type="checkbox" value=""/><span>API安全管理</span></div>
-            <div style="display: block"><input name="Fruit" type="checkbox" value=""/><span>应用性能管理</span></div>
-            <div style="display: block"><input name="Fruit" type="checkbox" value=""/><span>其他</span></div>
+            <div style="display: block"><input name="Fruit" type="checkbox" value="" style="display: inline-block"/><span>服务虚拟化管理</span></div>
+            <div style="display: block"><input name="Fruit" type="checkbox" value="" style="display: inline-block"/><span>API安全管理</span></div>
+            <div style="display: block"><input name="Fruit" type="checkbox" value="" style="display: inline-block"/><span>应用性能管理</span></div>
+            <div style="display: block"><input name="Fruit" type="checkbox" value="" style="display: inline-block"/><span>其他</span></div>
         </div>
         <div class="title">4.这个项目是否已经获得预算支持？</div>
         <div class='dropdown'>
